--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>My Portfolio</h1>
+						<h1>Main Title</h1>
 						<p>desc</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -29,9 +29,9 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-						</ul>
+						<!-- <ul class="links"> -->
+						<!-- <li class="active"><a href="index.html">This is Massively</a></li> -->
+						<!-- </ul> -->
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
