--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 			</ul>
 		</div>
 
-
+				-->
 			<header id="header">
-				<a href="index.html" class="logo">Massively</a>
+				<!-- <a href="index.html" class="logo">Massively</a> -->
 			</header>
 
 
 
-			-->
+
 
 			<!-- Nav -->
 			<nav id="nav">
