--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Name</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,19 +16,22 @@
 			<!-- Intro -->
 			<!--
 
-							<div id="intro">
-			<h1>Main Title</h1>
-			<p>desc</p>
-			<ul class="actions">
-				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-			</ul>
-		</div>
+						<div id="intro">
+		<h1>Main Title</h1>
+		<p>desc</p>
+		<ul class="actions">
+			<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+		</ul>
+	</div>
 
-				-->
-			<header id="header">
-				<!-- <a href="index.html" class="logo">Massively</a> -->
+
+		<header id="header">
+			 <a href="index.html" class="logo">Massively</a>
 			</header>
 
+			-->
+
+			<p> </p>
 
 
 
@@ -47,12 +50,7 @@
 				<!-- Featured Post -->
 				<article class="post featured">
 					<header class="major">
-						<h2>
-							<a href="#">
-								And this is a<br />
-								massive headline
-							</a>
-						</h2>
+						<h2> Title</h2>
 						<p>
 							Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 							facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
