--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			-->
 
-			<p> </p>
+			<p> <br /> </p>
 
 
 
@@ -50,12 +50,8 @@
 				<!-- Featured Post -->
 				<article class="post featured">
 					<header class="major">
-						<h2> Title</h2>
-						<p>
-							Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-							facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-							amet nullam sed etiam veroeros.
-						</p>
+						<h1> Title</h1>
+						<p> desc </p>
 					</header>
 					<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 					<ul class="actions special">
