--- a/index.html
+++ b/index.html
@@ -13,33 +13,13 @@
 		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 
-			<!-- Intro -->
-			<!--
-
-						<div id="intro">
-		<h1>Main Title</h1>
-		<p>desc</p>
-		<ul class="actions">
-			<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-		</ul>
-	</div>
-
-
-		<header id="header">
-			 <a href="index.html" class="logo">Massively</a>
-			</header>
-
-			-->
-
+			<!-- Spacing -->
 			<p> <br /> <br /> </p>
-
-
-
 
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://en.wikipedia.org/wiki/Main_Page" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 			</nav>
