--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="wrapper" class="fade-in">
 
 			<!-- Spacing -->
-			<p> <br /> <br /> </p>
+			<p><br /><br /></p>
 
 			<!-- Nav -->
 			<nav id="nav">
@@ -27,16 +27,12 @@
 			<!-- Main -->
 			<div id="main">
 
-				<!-- Featured Post -->
+				<!-- Title -->
 				<article class="post featured">
 					<header class="major">
-						<h1> Title </h1>
-						<p> desc </p>
+						<h1> My Name </h1>
+						<p> short desc </p>
 					</header>
-					<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-					<ul class="actions special">
-						<li><a href="#" class="button large">Full Story</a></li>
-					</ul>
 				</article>
 
 				<!-- Posts -->
