--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 				<!-- Title -->
 				<article class="post featured">
-					<header class="major">
-						<h1> My Name </h1>
-						<p> short desc </p>
-					</header>
+					<!-- <header class="major"> -->
+					<h2> My Name </h2>
+					<p> short desc </p>
+					<!-- </header> -->
 				</article>
 
 				<!-- Posts -->
