--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 			<div id="main">
 
 				<!-- Title -->
-				<article class="post featured">
-					<!-- <header class="major"> -->
+				<!-- <article class="post featured"> -->
+				<header class="major">
 					<h2> My Name </h2>
 					<p> short desc </p>
-					<!-- </header> -->
-				</article>
+				</header>
+				<!-- </article> -->
 
 				<!-- Posts -->
 				<section class="posts">
