--- a/index.html
+++ b/index.html
@@ -28,31 +28,21 @@
 			<div id="main">
 
 				<!-- Title -->
-				<!-- <article class="post featured"> -->
 				<header class="major">
-					<h2> My Name </h2>
-					<p> short desc </p>
+					<h2>My Name</h2>
+					<p>short desc</p>
 				</header>
-				<!-- </article> -->
 
-				<!-- Posts -->
+				<!-- Content -->
 				<section class="posts">
 					<article>
 						<header>
-							<span class="date">April 24, 2017</span>
-							<h2>
-								<a href="#">
-									Sed magna<br />
-									ipsum faucibus
-								</a>
-							</h2>
+							<h2>sub title</h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-						<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button">Full Story</a></li>
-						</ul>
+						<img src="images/pic02.jpg" alt="" />
+						<p>text</p>
 					</article>
+
 					<article>
 						<header>
 							<span class="date">April 22, 2017</span>
