--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			<div id="main">
 
 				<!-- Title -->
-				<article class="major">
+				<header class="major">
 					<h2>My Name</h2>
 					<p>short desc</p>
-				</article>
+				</header>
 
 				<!-- Content -->
 				<section class="posts">
