--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="icons">
-					<li><a href="https://en.wikipedia.org/wiki/Main_Page" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 			</nav>
@@ -29,7 +29,7 @@
 
 				<!-- Title -->
 				<header class="major">
-					<h1>My Name</h1>
+					<h1>Name</h1>
 					<p>short desc</p>
 				</header>
 
@@ -37,7 +37,7 @@
 				<section class="posts">
 					<article>
 						<header>
-							<h4>sub title 1</h4>
+							<h2>sub title 1 aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h2>
 						</header>
 						<img src="images/pic02.jpg" alt="" />
 						<p>text</p>
@@ -45,7 +45,7 @@
 
 					<article>
 						<header>
-							<h4>sub title 2</h4>
+							<h2>sub title 2</h2>
 						</header>
 						<img src="images/pic03.jpg" alt="" />
 						<p>text</p>
@@ -53,7 +53,7 @@
 
 					<article>
 						<header>
-							<h4>sub title 3</h4>
+							<h2>sub title 3</h2>
 						</header>
 						<img src="images/pic04.jpg" alt="" />
 						<p>text</p>
@@ -61,7 +61,7 @@
 
 					<article>
 						<header>
-							<h4>sub title 4</h4>
+							<h2>sub title 4</h2>
 						</header>
 						<img src="images/pic05.jpg" alt="" />
 						<p>text</p>
@@ -69,7 +69,7 @@
 
 					<article>
 						<header>
-							<h4>sub title 5</h4>
+							<h2>sub title 5</h2>
 						</header>
 						<img src="images/pic06.jpg" alt="" />
 						<p>text</p>
@@ -77,24 +77,16 @@
 
 					<article>
 						<header>
-							<h4>sub title 6</h4>
+							<h2>sub title 6</h2>
 						</header>
 						<img src="images/pic07.jpg" alt="" />
 						<p>text</p>
 					</article>
 				</section>
 			</div>
-
-			<!-- Copyright -->
-			<div id="copyright">
-				<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-			</div>
-
 		</div>
 
-
 		<!-- Scripts -->
-		<!--
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.scrollex.min.js"></script>
 		<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -102,6 +94,5 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-		-->
 	</body>
 </html>
