--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 				<section class="posts">
 					<article>
 						<header>
-							<h2>sub title 1 aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h2>
+							<h2>sub title 1</h2>
 						</header>
 						<img src="images/pic02.jpg" alt="" />
-						<p>text</p>
+						<p>text aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
 					</article>
 
 					<article>
@@ -56,7 +56,7 @@
 							<h2>sub title 3</h2>
 						</header>
 						<img src="images/pic04.jpg" alt="" />
-						<p>text</p>
+						<p>text aaaaaaaaaaaaaaaaaaaaaa <br /> aaaaaaaaaaaa <br /> aaa <br /> aaaaaaaaaaaaaaaa</p>
 					</article>
 
 					<article>
