--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<h2>sub title 1</h2>
 						</header>
 						<img src="images/pic02.jpg" alt="" />
-						<p>text aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+						<p>text</p>
 					</article>
 
 					<article>
@@ -56,7 +56,7 @@
 							<h2>sub title 3</h2>
 						</header>
 						<img src="images/pic04.jpg" alt="" />
-						<p>text aaaaaaaaaaaaaaaaaaaaaa <br /> aaaaaaaaaaaa <br /> aaa <br /> aaaaaaaaaaaaaaaa</p>
+						<p>text</p>
 					</article>
 
 					<article>
@@ -80,6 +80,22 @@
 							<h2>sub title 6</h2>
 						</header>
 						<img src="images/pic07.jpg" alt="" />
+						<p>text</p>
+					</article>
+
+					<article>
+						<header>
+							<h2>sub title 7</h2>
+						</header>
+						<img src="images/pic08.jpg" alt="" />
+						<p>text</p>
+					</article>
+
+					<article>
+						<header>
+							<h9>sub title 8</h9>
+						</header>
+						<img src="images/pic09.jpg" alt="" />
 						<p>text</p>
 					</article>
 				</section>
