page layout setup finished

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<h2>sub title 1</h2>
 						</header>
 						<img src="images/pic02.jpg" alt="" />
-						<p>text</p>
+						<p>text 1</p>
 					</article>
 
 					<article>
@@ -48,7 +48,7 @@
 							<h2>sub title 2</h2>
 						</header>
 						<img src="images/pic03.jpg" alt="" />
-						<p>text</p>
+						<p>text 2</p>
 					</article>
 
 					<article>
@@ -56,7 +56,7 @@
 							<h2>sub title 3</h2>
 						</header>
 						<img src="images/pic04.jpg" alt="" />
-						<p>text</p>
+						<p>text 3</p>
 					</article>
 
 					<article>
@@ -64,7 +64,7 @@
 							<h2>sub title 4</h2>
 						</header>
 						<img src="images/pic05.jpg" alt="" />
-						<p>text</p>
+						<p>text 4</p>
 					</article>
 
 					<article>
@@ -72,7 +72,7 @@
 							<h2>sub title 5</h2>
 						</header>
 						<img src="images/pic06.jpg" alt="" />
-						<p>text</p>
+						<p>text 5</p>
 					</article>
 
 					<article>
@@ -80,24 +80,9 @@
 							<h2>sub title 6</h2>
 						</header>
 						<img src="images/pic07.jpg" alt="" />
-						<p>text</p>
+						<p>text 6</p>
 					</article>
 
-					<article>
-						<header>
-							<h2>sub title 7</h2>
-						</header>
-						<img src="images/pic08.jpg" alt="" />
-						<p>text</p>
-					</article>
-
-					<article>
-						<header>
-							<h9>sub title 8</h9>
-						</header>
-						<img src="images/pic09.jpg" alt="" />
-						<p>text</p>
-					</article>
 				</section>
 			</div>
 		</div>
