--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/slick-lightbox.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -39,7 +42,12 @@
 						<header>
 							<h2>sub title 1</h2>
 						</header>
-						<img src="images/pic02.jpg" alt="" />
+						<div class="slicky">
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 1"><img src="images/pic02.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 2"><img src="images/pic02.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 3"><img src="images/pic02.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 4"><img src="images/pic02.jpg"/></a>
+						</div>	
 						<p>text 1</p>
 					</article>
 
@@ -47,7 +55,12 @@
 						<header>
 							<h2>sub title 2</h2>
 						</header>
-						<img src="images/pic03.jpg" alt="" />
+						<div class="slicky">
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 1"><img src="images/pic02.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 2"><img src="images/pic02.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 3"><img src="images/pic02.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 4"><img src="images/pic02.jpg"/></a>
+						</div>	
 						<p>text 2</p>
 					</article>
 
@@ -98,6 +111,8 @@
 		<script src="assets/js/browser.min.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
+		<script src="assets/js/slick.min.js"></script>
+		<script src="assets/js/slick-lightbox.min.js"></script>
 		<script src="assets/js/main.js"></script>
 	</body>
 </html>
