--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="Joes Pic 1"><img src="images/pic02.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 2"><img src="images/pic02.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 3"><img src="images/pic02.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 4"><img src="images/pic02.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 2"><img src="images/pic03.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="images/pic04.jpg"><img src="images/pic04.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="images/pic05.jpg"><img src="images/pic05.jpg"/></a>
 						</div>	
 						<p>text 1</p>
 					</article>
