--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 							<h2>sub title 1</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 1"><img src="images/pic02.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 2"><img src="images/pic03.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="images/pic04.jpg"><img src="images/pic04.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="images/pic05.jpg"><img src="images/pic05.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg"/></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg"/></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg"/></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg"/></a>
 						</div>	
 						<p>text 1</p>
 					</article>
