--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 							<h2>sub title 1</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg"/></a>
-							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg"/></a>
-							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg"/></a>
-						</div>	
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+						</div>
 						<p>text 1</p>
 					</article>
 
@@ -56,11 +56,11 @@
 							<h2>sub title 2</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 1"><img src="images/pic02.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 2"><img src="images/pic02.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 3"><img src="images/pic02.jpg"/></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 4"><img src="images/pic02.jpg"/></a>
-						</div>	
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 2"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 3"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="Joes Pic 4"><img src="images/pic02.jpg" /></a>
+						</div>
 						<p>text 2</p>
 					</article>
 
@@ -94,6 +94,22 @@
 						</header>
 						<img src="images/pic07.jpg" alt="" />
 						<p>text 6</p>
+					</article>
+
+					<article>
+						<header>
+							<h2>sub title 7</h2>
+						</header>
+						<img src="images/pic07.jpg" alt="" />
+						<p>text 7</p>
+					</article>
+
+					<article>
+						<header>
+							<h2>sub title 8</h2>
+						</header>
+						<img src="images/pic07.jpg" alt="" />
+						<p>text 8</p>
 					</article>
 
 				</section>
