--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 							<h2>sub title 2</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 1"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 2"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 3"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="Joes Pic 4"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
 						<p>text 2</p>
 					</article>
@@ -68,7 +68,12 @@
 						<header>
 							<h2>sub title 3</h2>
 						</header>
-						<img src="images/pic04.jpg" alt="" />
+						<div class="slicky">
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+						</div>
 						<p>text 3</p>
 					</article>
 
@@ -76,7 +81,12 @@
 						<header>
 							<h2>sub title 4</h2>
 						</header>
-						<img src="images/pic05.jpg" alt="" />
+						<div class="slicky">
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+						</div>
 						<p>text 4</p>
 					</article>
 
@@ -84,7 +94,12 @@
 						<header>
 							<h2>sub title 5</h2>
 						</header>
-						<img src="images/pic06.jpg" alt="" />
+						<div class="slicky">
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+						</div>
 						<p>text 5</p>
 					</article>
 
@@ -92,7 +107,12 @@
 						<header>
 							<h2>sub title 6</h2>
 						</header>
-						<img src="images/pic07.jpg" alt="" />
+						<div class="slicky">
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+						</div>
 						<p>text 6</p>
 					</article>
 
@@ -100,7 +120,12 @@
 						<header>
 							<h2>sub title 7</h2>
 						</header>
-						<img src="images/pic07.jpg" alt="" />
+						<div class="slicky">
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+						</div>
 						<p>text 7</p>
 					</article>
 
@@ -108,7 +133,12 @@
 						<header>
 							<h2>sub title 8</h2>
 						</header>
-						<img src="images/pic07.jpg" alt="" />
+						<div class="slicky">
+							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
+							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
+							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+						</div>
 						<p>text 8</p>
 					</article>
 
