--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Name</title>
+		<title>Joe Mason Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +32,7 @@
 
 				<!-- Title -->
 				<header class="major">
-					<h1>Name</h1>
+					<h1>Joe Mason</h1>
 					<p>short desc</p>
 				</header>
 
@@ -40,13 +40,22 @@
 				<section class="posts">
 					<article>
 						<header>
-							<h2>sub title 1</h2>
+							<h2>^^^^^^</h2>
 						</header>
 						<div class="slicky">
+							<a href="bigimages/^^^^^^/titlepage1.png" data-caption="Title Page"><img src="images/^^^^^^/titlepage1.png" /></a>
+							<a href="bigimages/^^^^^^/titlepage2.png" data-caption="Title Page"><img src="images/^^^^^^/titlepage2.png" /></a>
 							<a href="bigimages/^^^^^^/gameplay1.png" data-caption="Level 1-1"><img src="images/^^^^^^/gameplay1.png" /></a>
 							<a href="bigimages/^^^^^^/gameplay2.png" data-caption="Level 1-2"><img src="images/^^^^^^/gameplay2.png" /></a>
+							<a href="bigimages/^^^^^^/gameplay3.png" data-caption="Level 1-3"><img src="images/^^^^^^/gameplay3.png" /></a>
+							<a href="bigimages/^^^^^^/gameplay4.png" data-caption="Level 1-3"><img src="images/^^^^^^/gameplay4.png" /></a>
+							<a href="bigimages/^^^^^^/gameplay5.png" data-caption="Level 1-4"><img src="images/^^^^^^/gameplay5.png" /></a>
 						</div>
-						<p>text 1</p>
+						<p>
+						^^^^^^ is a homage to the retro game vvvvvv. <br />
+						Made in C++ with no game engine, a<br />
+						self-made framework and the SDL library.
+						</p>
 					</article>
 
 					<article>
