--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 							<a href="bigimages/^^^^^^/gameplay5.png" data-caption="Level 1-4"><img src="images/^^^^^^/gameplay5.png" /></a>
 						</div>
 						<p>
-						^^^^^^ is a homage to the retro game vvvvvv. <br />
-						Made in C++ with no game engine, a<br />
-						self-made framework and the SDL library.
+						^^^^^^ is a homage to the retro game vvvvvv. Made in<br />
+						with no game engine, a self-made framework and the<br />
+						SDL library.
 						</p>
 					</article>
 
