--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 						</div>
 						<p>
 						^^^^^^ is a homage to the retro game vvvvvv. Made in<br />
-						with no game engine, a self-made framework and the<br />
-						SDL library.
+						C++ with no game engine, a self-made framework and<br />
+						the SDL library.
 						</p>
 					</article>
 
