--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<!-- Title -->
 				<header class="major">
 					<h1>Joe Mason</h1>
-					<p>short desc</p>
+					<p>Gameplay programmer</p>
 				</header>
 
 				<!-- Content -->
@@ -60,18 +60,19 @@
 
 					<article>
 						<header>
-							<h2>sub title 2</h2>
+							<h2>Unreal Engine Sandbox</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
 							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
 						</div>
-						<p>text 2</p>
+						<p>A sandbox project using C++ in Unreal Engine 4<br />
+						to demonstrate common gameplay functionality</p>
 					</article>
 
 					<article>
 						<header>
-							<h2>sub title 3</h2>
+							<h2>Planet Climbers Online</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
@@ -79,12 +80,14 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>text 3</p>
+						<p>A 2D, online multiplayer climbing game.<br />
+						where you race your friends to the top<br />
+						of each stage. Made in Unity with C#.</p>
 					</article>
 
 					<article>
 						<header>
-							<h2>sub title 4</h2>
+							<h2>Model Renderer</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
@@ -92,12 +95,14 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>text 4</p>
+						<p>A model renderer made in C++ using OpenGL,<br />
+						glm, glad, GLFW and Dear IMGUI.</p>
 					</article>
 
 					<article>
 						<header>
-							<h2>sub title 5</h2>
+							<h2>Fighting Fire <br />
+							With Fire (VR)</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
@@ -105,12 +110,14 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>text 5</p>
+						<p>Work through a burning building,<br />
+						extinguishing fires with a twist.<br />
+						A VR game made in Unity with c#</p>
 					</article>
 
 					<article>
 						<header>
-							<h2>sub title 6</h2>
+							<h2>3D Boids</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
@@ -118,12 +125,13 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>text 6</p>
+						<p>3D implementation of boids made with C++,<br />
+						using Assimp, glm, glad and GLFW. </p>
 					</article>
 
 					<article>
 						<header>
-							<h2>sub title 7</h2>
+							<h2>Golf (Mobile)</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
@@ -131,12 +139,12 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>text 7</p>
+						<p>A mobile golf game made in Unity with C#.</p>
 					</article>
 
 					<article>
 						<header>
-							<h2>sub title 8</h2>
+							<h2>This Portfolio!</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
@@ -144,7 +152,8 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>text 8</p>
+						<p>Hosted on github pages, made using HTML,<br />
+						CSS and JS. </p>
 					</article>
 
 				</section>
