--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
 							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
 						</div>
-						<p>A sandbox project using C++ in Unreal Engine 4<br />
-						to demonstrate common gameplay functionality</p>
+						<p>A sandbox project using C++ in Unreal Engine 4 to<br />
+						demonstrate common gameplay functionality</p>
 					</article>
 
 					<article>
@@ -80,9 +80,9 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>A 2D, online multiplayer climbing game.<br />
-						where you race your friends to the top<br />
-						of each stage. Made in Unity with C#.</p>
+						<p>A 2D, online multiplayer climbing game where you<br />
+						race your friends to the top of each stage. Made in<br />
+						Unity with C#.</p>
 					</article>
 
 					<article>
@@ -95,8 +95,8 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>A model renderer made in C++ using OpenGL,<br />
-						glm, glad, GLFW and Dear IMGUI.</p>
+						<p>A model renderer made in C++ using OpenGL, glm<br />
+						glad, GLFW and Dear IMGUI.</p>
 					</article>
 
 					<article>
@@ -110,9 +110,8 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>Work through a burning building,<br />
-						extinguishing fires with a twist.<br />
-						A VR game made in Unity with c#</p>
+						<p>Work through a burning building, extinguishing<br />
+						fires with a twist. A VR game made in unity with C#</p>
 					</article>
 
 					<article>
@@ -125,8 +124,8 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>3D implementation of boids made with C++,<br />
-						using Assimp, glm, glad and GLFW. </p>
+						<p>3D implementation of boids made with C++, using<br />
+						Assimp, glm, glad and GLFW. </p>
 					</article>
 
 					<article>
@@ -152,8 +151,7 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>Hosted on github pages, made using HTML,<br />
-						CSS and JS. </p>
+						<p>Hosted on github pages, made using HTML, CSS and JS. </p>
 					</article>
 
 				</section>
