update index.html, added images for fireVR

--- a/index.html
+++ b/index.html
@@ -105,10 +105,13 @@
 							With Fire (VR)</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
-							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
-							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+							<a href="bigimages/fireVR/startroom1.png" data-caption="Start Room"><img src="images/fireVR/startroom1.png" /></a>
+							<a href="bigimages/fireVR/gameplay1.png" data-caption="Gameplay"><img src="images/fireVR/gameplay1.png" /></a>
+							<a href="bigimages/fireVR/gameplay2.png" data-caption="Gameplay"><img src="images/fireVR/gameplay2.png" /></a>
+							<a href="bigimages/fireVR/gameplay3.png" data-caption="Gameplay"><img src="images/fireVR/gameplay3.png" /></a>
+							<a href="bigimages/fireVR/gameplay4.png" data-caption="Gameplay"><img src="images/fireVR/gameplay4.png" /></a>
+							<a href="bigimages/fireVR/gameplay5.png" data-caption="X-Ray View"><img src="images/fireVR/gameplay5.png" /></a>
+							<a href="bigimages/fireVR/endrom1.png" data-caption="End Room"><img src="images/fireVR/endroom1.png" /></a>
 						</div>
 						<p>Work through a burning building, extinguishing<br />
 						fires with a twist. A VR game made in unity with C#</p>
