--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>A 2D, online multiplayer climbing game where you<br />
-						race your friends to the top of each stage. Made in<br />
-						Unity with C#.</p>
+						<p>A 2D, online multiplayer climbing game where you race your<br />
+						friends to the top of each stage. Made in Unity with C#.</p>
 					</article>
 
 					<article>
@@ -95,8 +94,8 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>A model renderer made in C++ using OpenGL, glm<br />
-						glad, GLFW and Dear IMGUI.</p>
+						<p>A model renderer made in C++ using OpenGL, glm, glad.<br />
+						GLFW and Dear IMGUI.</p>
 					</article>
 
 					<article>
