--- a/index.html
+++ b/index.html
@@ -52,10 +52,19 @@
 							<a href="bigimages/^^^^^^/gameplay5.png" data-caption="Level 1-4"><img src="images/^^^^^^/gameplay5.png" /></a>
 						</div>
 						<p>
-						^^^^^^ is a homage to the retro game vvvvvv. Made in<br />
-						C++ with no game engine, a self-made framework and<br />
-						the SDL library.
+							^^^^^^ is a homage to the retro game vvvvvv. Made in 
+							C++ with no game engine, a self-made framework and 
+							the SDL library.
 						</p>
+
+						<!--
+
+						<p>
+	^^^^^^ is a homage to the retro game vvvvvv. Made in<br />
+	C++ with no game engine, a self-made framework and<br />
+	the SDL library.
+	</p>
+		-->
 					</article>
 
 					<article>
@@ -80,8 +89,9 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>A 2D, online multiplayer climbing game where you race your<br />
-						friends to the top of each stage. Made in Unity with C#.</p>
+						<p>A 2D, online multiplayer climbing game where you race<br />
+						your friends to the top of each stage. Made in Unity<br />
+						with C#.</p>
 					</article>
 
 					<article>
@@ -94,7 +104,7 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>A model renderer made in C++ using OpenGL, glm, glad.<br />
+						<p>A model renderer made in C++ using OpenGL, glm, glad,<br />
 						GLFW and Dear IMGUI.</p>
 					</article>
 
