--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
 							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
 						</div>
-						<p>A sandbox project using C++ in Unreal Engine 4 to<br />
+						<p>A sandbox project using C++ in Unreal Engine 4 to 
 						demonstrate common gameplay functionality</p>
 					</article>
 
@@ -89,8 +89,8 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>A 2D, online multiplayer climbing game where you race<br />
-						your friends to the top of each stage. Made in Unity<br />
+						<p>A 2D, online multiplayer climbing game where you race 
+						your friends to the top of each stage. Made in Unity 
 						with C#.</p>
 					</article>
 
@@ -104,7 +104,7 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>A model renderer made in C++ using OpenGL, glm, glad,<br />
+						<p>A model renderer made in C++ using OpenGL, glm, glad, 
 						GLFW and Dear IMGUI.</p>
 					</article>
 
@@ -115,14 +115,14 @@
 						</header>
 						<div class="slicky">
 							<a href="bigimages/fireVR/startroom1.png" data-caption="Start Room"><img src="images/fireVR/startroom1.png" /></a>
-							<a href="bigimages/fireVR/gameplay1.png" data-caption="Gameplay"><img src="images/fireVR/gameplay1.png" /></a>
-							<a href="bigimages/fireVR/gameplay2.png" data-caption="Gameplay"><img src="images/fireVR/gameplay2.png" /></a>
-							<a href="bigimages/fireVR/gameplay3.png" data-caption="Gameplay"><img src="images/fireVR/gameplay3.png" /></a>
-							<a href="bigimages/fireVR/gameplay4.png" data-caption="Gameplay"><img src="images/fireVR/gameplay4.png" /></a>
+							<a href="bigimages/fireVR/gameplay1.png" data-caption="Start of Level 1"><img src="images/fireVR/gameplay1.png" /></a>
+							<a href="bigimages/fireVR/gameplay2.png" data-caption="Fighting the fire"><img src="images/fireVR/gameplay2.png" /></a>
+							<a href="bigimages/fireVR/gameplay3.png" data-caption="Fire extinguished"><img src="images/fireVR/gameplay3.png" /></a>
+							<a href="bigimages/fireVR/gameplay4.png" data-caption="Fighting more fire"><img src="images/fireVR/gameplay4.png" /></a>
 							<a href="bigimages/fireVR/gameplay5.png" data-caption="X-Ray View"><img src="images/fireVR/gameplay5.png" /></a>
 							<a href="bigimages/fireVR/endrom1.png" data-caption="End Room"><img src="images/fireVR/endroom1.png" /></a>
 						</div>
-						<p>Work through a burning building, extinguishing<br />
+						<p>Work through a burning building, extinguishing 
 						fires with a twist. A VR game made in unity with C#</p>
 					</article>
 
@@ -136,7 +136,7 @@
 							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
 							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
 						</div>
-						<p>3D implementation of boids made with C++, using<br />
+						<p>3D implementation of boids made with C++, using 
 						Assimp, glm, glad and GLFW. </p>
 					</article>
 
