--- a/index.html
+++ b/index.html
@@ -56,15 +56,6 @@
 							C++ with no game engine, a self-made framework and 
 							the SDL library.
 						</p>
-
-						<!--
-
-						<p>
-	^^^^^^ is a homage to the retro game vvvvvv. Made in<br />
-	C++ with no game engine, a self-made framework and<br />
-	the SDL library.
-	</p>
-		-->
 					</article>
 
 					<article>
@@ -76,7 +67,7 @@
 							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
 						</div>
 						<p>A sandbox project using C++ in Unreal Engine 4 to 
-						demonstrate common gameplay functionality</p>
+						demonstrate common gameplay features and functionality</p>
 					</article>
 
 					<article>
@@ -128,7 +119,7 @@
 
 					<article>
 						<header>
-							<h2>3D Boids</h2>
+							<h2>3D Boids [WIP]</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
