--- a/index.html
+++ b/index.html
@@ -63,8 +63,13 @@
 							<h2>Unreal Engine Sandbox</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
+							<a href="bigimages/ue4mechanicssandbox/startroom1.png" data-caption="Hub"><img src="images/ue4mechanicssandbox/startroom1.png" /></a>
+							<a href="bigimages/ue4mechanicssandbox/gameplay1.png" data-caption="The Door Problem"><img src="images/ue4mechanicssandbox/gameplay1.png" /></a>
+							<a href="bigimages/ue4mechanicssandbox/gameplay2.png" data-caption="The Door Problem"><img src="images/ue4mechanicssandbox/gameplay2.png" /></a>
+							<a href="bigimages/ue4mechanicssandbox/gameplay3.png" data-caption="Character Controller"><img src="images/ue4mechanicssandbox/gameplay3.png" /></a>
+							<a href="bigimages/ue4mechanicssandbox/gameplay4.png" data-caption="Elevators"><img src="images/ue4mechanicssandbox/gameplay4.png" /></a>
+							<a href="bigimages/ue4mechanicssandbox/gameplay5.png" data-caption="Elevators"><img src="images/ue4mechanicssandbox/gameplay5.png" /></a>
+							<a href="bigimages/ue4mechanicssandbox/gameplay6.png" data-caption="Teleporters"><img src="images/ue4mechanicssandbox/gameplay6.png" /></a>
 						</div>
 						<p>A sandbox project using C++ in Unreal Engine 4 to 
 						demonstrate common gameplay features and functionality</p>
@@ -75,10 +80,13 @@
 							<h2>Planet Climbers Online</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
-							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
-							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+							<a href="bigimages/planetclimbers/menu1.png" data-caption="Main Menu"><img src="images/planetclimbers/menu1.png" /></a>
+							<a href="bigimages/planetclimbers/menu2.png" data-caption="Room Menu"><img src="images/planetclimbers/menu2.png" /></a>
+							<a href="bigimages/planetclimbers/gameplay1.png" data-caption="Level 1-1"><img src="images/planetclimbers/gameplay1.png" /></a>
+							<a href="bigimages/planetclimbers/gameplay2.png" data-caption="Level 1-1"><img src="images/planetclimbers/gameplay2.png" /></a>
+							<a href="bigimages/planetclimbers/gameplay3.png" data-caption="Level 1-2"><img src="images/planetclimbers/gameplay3.png" /></a>
+							<a href="bigimages/planetclimbers/gameplay4.png" data-caption="Level 1-2"><img src="images/planetclimbers/gameplay4.png" /></a>
+							<a href="bigimages/planetclimbers/gameplay5.png" data-caption="Level 1-3"><img src="images/planetclimbers/gameplay5.png" /></a>
 						</div>
 						<p>A 2D, online multiplayer climbing game where you race 
 						your friends to the top of each stage. Made in Unity 
@@ -90,10 +98,10 @@
 							<h2>Model Renderer</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
-							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
-							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+							<a href="bigimages/modelrenderer/main1.png" data-caption=" "><img src="images/modelrenderer/main1.png" /></a>
+							<a href="bigimages/modelrenderer/main2.png" data-caption=" "><img src="images/modelrenderer/main2.png" /></a>
+							<a href="bigimages/modelrenderer/main3.png" data-caption=" "><img src="images/modelrenderer/main3.png" /></a>
+							<a href="bigimages/modelrenderer/main4.png" data-caption=" "><img src="images/modelrenderer/main4.png" /></a>
 						</div>
 						<p>A model renderer made in C++ using OpenGL, glm, glad, 
 						GLFW and Dear IMGUI.</p>
