--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<!-- Title -->
 				<header class="major">
 					<h1>Joe Mason</h1>
-					<p>Gameplay programmer</p>
+					<p>Year 2 Gameplay Programmer</p>
 				</header>
 
 				<!-- Content -->
@@ -130,10 +130,7 @@
 							<h2>3D Boids [WIP]</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
-							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
-							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+							<a href="bigimages/fireVR/startroom1.png" data-caption="Start Room"><img src="images/fireVR/startroom1.png" /></a>
 						</div>
 						<p>3D implementation of boids made with C++, using 
 						Assimp, glm, glad and GLFW. </p>
@@ -144,10 +141,7 @@
 							<h2>Golf (Mobile)</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
-							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
-							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+							<a href="bigimages/fireVR/startroom1.png" data-caption="Start Room"><img src="images/fireVR/startroom1.png" /></a>
 						</div>
 						<p>A mobile golf game made in Unity with C#.</p>
 					</article>
@@ -157,12 +151,9 @@
 							<h2>This Portfolio!</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/big.jpg" data-caption="img 1"><img src="images/pic02.jpg" /></a>
-							<a href="bigimages/big.jpg" data-caption="img 2"><img src="images/pic03.jpg" /></a>
-							<a href="images/pic04.jpg" data-caption="img 3"><img src="images/pic04.jpg" /></a>
-							<a href="images/pic05.jpg" data-caption="img 4"><img src="images/pic05.jpg" /></a>
+							<a href="bigimages/fireVR/startroom1.png" data-caption="Start Room"><img src="images/fireVR/startroom1.png" /></a>
 						</div>
-						<p>Hosted on github pages, made using HTML, CSS and JS. </p>
+						<p>Hosted on github pages. Made using HTML, CSS and JS. </p>
 					</article>
 
 				</section>
