added thisportfolio & some placeholder images, updated index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							<h2>3D Boids [WIP]</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/fireVR/startroom1.png" data-caption="Start Room"><img src="images/fireVR/startroom1.png" /></a>
+							<a href="bigimages/boids/main1.png" data-caption="[WIP]"><img src="images/boids/main1.png" /></a>
 						</div>
 						<p>3D implementation of boids made with C++, using 
 						Assimp, glm, glad and GLFW. </p>
@@ -141,7 +141,7 @@
 							<h2>Golf (Mobile)</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/fireVR/startroom1.png" data-caption="Start Room"><img src="images/fireVR/startroom1.png" /></a>
+							<a href="bigimages/golfmobile/main1.png" data-caption="[To Be Added]"><img src="images/golfmobile/main1.png" /></a>
 						</div>
 						<p>A mobile golf game made in Unity with C#.</p>
 					</article>
@@ -151,7 +151,7 @@
 							<h2>This Portfolio!</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/fireVR/startroom1.png" data-caption="Start Room"><img src="images/fireVR/startroom1.png" /></a>
+							<a href="bigimages/thisportfolio/main1.png" data-caption="This Portfolio!"><img src="images/thisportfolio/main1.png" /></a>
 						</div>
 						<p>Hosted on github pages. Made using HTML, CSS and JS. </p>
 					</article>
