--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 
 					<article>
 						<header>
-							<h2>3D Boids [WIP]</h2>
+							<h2>3D Boids [WIP]<br /></h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/boids/main1.png" data-caption="[WIP]"><img src="images/boids/main1.png" /></a>
+							<a href="bigimages/boids/main1.jpg" data-caption="[WIP]"><img src="images/boids/main1.jpg" /></a>
 						</div>
 						<p>3D implementation of boids made with C++, using 
 						Assimp, glm, glad and GLFW. </p>
@@ -141,7 +141,7 @@
 							<h2>Golf (Mobile)</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/golfmobile/main1.png" data-caption="[To Be Added]"><img src="images/golfmobile/main1.png" /></a>
+							<a href="bigimages/golfmobile/main1.jpg" data-caption="[To Be Added]"><img src="images/golfmobile/main1.jpg" /></a>
 						</div>
 						<p>A mobile golf game made in Unity with C#.</p>
 					</article>
