--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 
 					<article>
 						<header>
-							<h2>3D Boids [WIP]<br /></h2>
+							<h2>3D Boids<br />
+							[WIP]</h2>
 						</header>
 						<div class="slicky">
 							<a href="bigimages/boids/main1.jpg" data-caption="[WIP]"><img src="images/boids/main1.jpg" /></a>
