--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="www.linkedin.com/in/joe-mason-1a0517237" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/joe34441" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 			</nav>
 
