--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/joe-mason-1a0517237" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.linkedin.com/in/joemason34441" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/joe34441" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 			</nav>
@@ -33,7 +33,7 @@
 				<!-- Title -->
 				<header class="major">
 					<h1>Joe Mason</h1>
-					<p>Year 2 Gameplay Programmer</p>
+					<p>3rd Year Games Programmer</p>
 				</header>
 
 				<!-- Content -->
@@ -54,7 +54,24 @@
 						<p>
 							^^^^^^ is a homage to the retro game vvvvvv. Made in 
 							C++ with no game engine, a self-made framework and 
-							the SDL library.
+							the SDL library.aa
+							aaaa
+							aa
+							aaaa
+							aa
+							aa
+							aa
+							aa
+							aa
+							aa
+							aa
+							aa
+							aaaa
+							aa
+							aa
+							aa
+							a
+							b
 						</p>
 					</article>
 
