--- a/index.html
+++ b/index.html
@@ -55,23 +55,21 @@
 							^^^^^^ is a homage to the retro game vvvvvv. Made in 
 							C++ with no game engine, a self-made framework and 
 							the SDL library.aa
-							aaaa
-							aa
-							aaaa
-							aa
-							aa
-							aa
-							aa
-							aa
-							aa
-							aa
-							aa
-							aaaa
-							aa
-							aa
-							aa
-							a
-							b
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
 						</p>
 					</article>
 
