--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/joemason34441" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/joe34441" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:joemason34441@outlook.com" class="icon brands fa-outlook"><span class="label">Email</span></a><li>
 				</ul>
 			</nav>
 
@@ -86,8 +87,19 @@
 							<a href="bigimages/ue4mechanicssandbox/gameplay5.png" data-caption="Elevators"><img src="images/ue4mechanicssandbox/gameplay5.png" /></a>
 							<a href="bigimages/ue4mechanicssandbox/gameplay6.png" data-caption="Teleporters"><img src="images/ue4mechanicssandbox/gameplay6.png" /></a>
 						</div>
-						<p>A sandbox project using C++ in Unreal Engine 4 to 
-						demonstrate common gameplay features and functionality</p>
+						<p>
+						A sandbox project using C++ in Unreal Engine 4 to 
+						demonstrate common gameplay features and functionality
+													aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+						</p>
 					</article>
 
 					<article>
@@ -103,9 +115,16 @@
 							<a href="bigimages/planetclimbers/gameplay4.png" data-caption="Level 1-2"><img src="images/planetclimbers/gameplay4.png" /></a>
 							<a href="bigimages/planetclimbers/gameplay5.png" data-caption="Level 1-3"><img src="images/planetclimbers/gameplay5.png" /></a>
 						</div>
-						<p>A 2D, online multiplayer climbing game where you race 
+						<p>
+						A 2D, online multiplayer climbing game where you race 
 						your friends to the top of each stage. Made in Unity 
-						with C#.</p>
+						with C#.
+													aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+						</p>
 					</article>
 
 					<article>
@@ -118,8 +137,22 @@
 							<a href="bigimages/modelrenderer/main3.png" data-caption=" "><img src="images/modelrenderer/main3.png" /></a>
 							<a href="bigimages/modelrenderer/main4.png" data-caption=" "><img src="images/modelrenderer/main4.png" /></a>
 						</div>
-						<p>A model renderer made in C++ using OpenGL, glm, glad, 
-						GLFW and Dear IMGUI.</p>
+						<p>
+						A model renderer made in C++ using OpenGL, glm, glad, 
+						GLFW and Dear IMGUI.
+													aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+														aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+						</p>
 					</article>
 
 					<article>
@@ -136,8 +169,13 @@
 							<a href="bigimages/fireVR/gameplay5.png" data-caption="X-Ray View"><img src="images/fireVR/gameplay5.png" /></a>
 							<a href="bigimages/fireVR/endroom1.png" data-caption="End Room"><img src="images/fireVR/endroom1.png" /></a>
 						</div>
-						<p>Work through a burning building, extinguishing 
-						fires with a twist. A VR game made in unity with C#</p>
+						<p>
+						Work through a burning building, extinguishing 
+						fires with a twist. A VR game made in unity with C#
+													aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+						</p>
 					</article>
 
 					<article>
@@ -148,8 +186,16 @@
 						<div class="slicky">
 							<a href="bigimages/boids/main1.jpg" data-caption="[WIP]"><img src="images/boids/main1.jpg" /></a>
 						</div>
-						<p>3D implementation of boids made with C++, using 
-						Assimp, glm, glad and GLFW. </p>
+						<p>
+						3D implementation of boids made with C++, using 
+						Assimp, glm, glad and GLFW.
+													aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+														aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+						</p>
 					</article>
 
 					<article>
@@ -159,7 +205,12 @@
 						<div class="slicky">
 							<a href="bigimages/golfmobile/main1.jpg" data-caption="[To Be Added]"><img src="images/golfmobile/main1.jpg" /></a>
 						</div>
-						<p>A mobile golf game made in Unity with C#.</p>
+						<p>
+						A mobile golf game made in Unity with C#.
+													aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+						</p>
 					</article>
 
 					<article>
@@ -169,7 +220,16 @@
 						<div class="slicky">
 							<a href="bigimages/thisportfolio/main1.png" data-caption="This Portfolio!"><img src="images/thisportfolio/main1.png" /></a>
 						</div>
-						<p>Hosted on github pages. Made using HTML, CSS and JS. </p>
+						<p>
+						Hosted on github pages. Made using HTML, CSS and JS.
+													aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+							aaaa a a a a a a a aa aaaa a a a a a a a aa aaaa a a a a a a a aa 
+						</p>
 					</article>
 
 				</section>
