--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/joemason34441" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/joe34441" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:joemason34441@outlook.com" class="icon brands fa-outlook"><span class="label">Email</span></a><li>
+					<li><a href="mailto:joemason34441@outlook.com" class="icon brands fa-outlook"><span class="label">Outlook</span></a><li>
 				</ul>
 			</nav>
 
