--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<div class="slicky">
 							<a href="bigimages/^^^^^^/titlepage1.png" data-caption="Title Page"><img src="images/^^^^^^/titlepage1.png" /></a>
 						</div>
-						<p>
+						<p style="font-size: large;">
 							A dungeon level whitebox created in Unreal Engine 4.
 							Uses c++ and blueprints for puzzles, traps and other
 							features. Level content and flow inspired by The Elder
@@ -99,7 +99,7 @@
 						<div class="slicky">
 							<a href="bigimages/^^^^^^/titlepage1.png" data-caption="Title Page"><img src="images/^^^^^^/titlepage1.png" /></a>
 						</div>
-						<p>
+						<p style="font-size: large;">
 							An online multiplayer tag game where players use a
 							range of abilities to remain untagged and gain points.
 							A Unity project, my role was primarily focused on the
@@ -116,7 +116,7 @@
 						<div class="slicky">
 							<a href="bigimages/^^^^^^/titlepage1.png" data-caption="Title Page"><img src="images/^^^^^^/titlepage1.png" /></a>
 						</div>
-						<p>
+						<p style="font-size: large;">
 							description
 							<br> Available at: &lt;git repo&gt;
 						</p>
@@ -129,7 +129,7 @@
 						<div class="slicky">
 							<a href="bigimages/^^^^^^/titlepage1.png" data-caption="Title Page"><img src="images/^^^^^^/titlepage1.png" /></a>
 						</div>
-						<p>
+						<p style="font-size: large;">
 							description
 							<br> Available at: &lt;git repo&gt;
 						</p>
@@ -148,7 +148,7 @@
 							<a href="bigimages/^^^^^^/gameplay4.png" data-caption="Level 1-3"><img src="images/^^^^^^/gameplay4.png" /></a>
 							<a href="bigimages/^^^^^^/gameplay5.png" data-caption="Level 1-4"><img src="images/^^^^^^/gameplay5.png" /></a>
 						</div>
-						<p>
+						<p style="font-size: large;">
 							^^^^^^ is a homage to the retro game vvvvvv. Made in 
 							C++ with no game engine, a self-made framework and 
 							the SDL library.
@@ -163,7 +163,7 @@
 						<div class="slicky">
 							<a href="bigimages/^^^^^^/titlepage1.png" data-caption="Title Page"><img src="images/^^^^^^/titlepage1.png" /></a>
 						</div>
-						<p>
+						<p style="font-size: large;">
 							description
 							<br> Available at: &lt;git repo&gt;
 						</p>
