--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Title -->
 				<header class="major">
 					<h1>Joe Mason</h1>
-					<p>3rd Year Games Programmer</p>
+					<p>3rd Year Games Programmer - University of Gloucestershire</p>
 				</header>
 
 				<!-- Content -->
@@ -192,7 +192,11 @@
 							<h2 style="font-size: xx-large;">Dungeon Generator</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/^^^^^^/titlepage1.png" data-caption="Title Page"><img src="images/^^^^^^/titlepage1.png" /></a>
+							<a href="bigimages/backtracking/img1.png" data-caption="Example generation. green path is longest route, red markers at dead ends"><img src="images/backtracking/img1.png" /></a>
+							<a href="bigimages/backtracking/img2.png" data-caption="View from inside a dungeon"><img src="images/backtracking/img2.png" /></a>
+							<a href="bigimages/backtracking/img3.png" data-caption="Transitioning rooms between floors on infinite generation"><img src="images/backtracking/img3.png" /></a>
+							<a href="bigimages/backtracking/img4.png" data-caption="3 Layers active during infinite generation - Below, Current, Above"><img src="images/backtracking/img4.png" /></a>
+							<a href="bigimages/backtracking/img5.png" data-caption="200 by 200 dungeon, aprox 25,000 rooms, 3 seconds to generate"><img src="images/backtracking/img5.png" /></a>
 						</div>
 						<p style="font-size: large;">
 							A dungeon generator utilising recursive backtracking.
