--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Title -->
 				<header class="major">
 					<h1>Joe Mason</h1>
-					<p>3rd Year Games Programmer - University of Gloucestershire</p>
+					<p>Games Programming Graduate - University of Gloucestershire</p>
 				</header>
 
 				<!-- Content -->
