small update for ue4 terrain base image & text

--- a/index.html
+++ b/index.html
@@ -218,6 +218,26 @@
 				<section class="UnrealEngine posts" id="section2">
 					<article>
 						<header>
+							<h2 style="font-size: xx-large;">Terrain Generator</h2>
+						</header>
+						<div class="slicky">
+							<a href="bigimages/ue4terraingenerator/img1.png" data-caption="temp"><img src="images/ue4terraingenerator/img1.png" /></a>
+						</div>
+						<p style="font-size: large; text-align: left;">
+							A terrain generator created in Unreal Engine 4 with
+							C++. Combines multiple instances of noise maps to
+							allow for the creation of a wide variety of landscape
+							patterns according to user input. The generator
+							dynamically constructs and renders the terrain mesh
+							in chunks, for which I have implemented mesh
+							simplification and edge smoothing techniques to allow
+							for faster generation with seamless chunk borders.
+							<br><a href="https://github.com">Project</a>
+						</p>
+					</article>
+
+					<article>
+						<header>
 							<h2 style="font-size: xx-large;">Dungeon Level</h2>
 						</header>
 						<div class="slicky">
@@ -236,26 +256,6 @@
 							Scrolls 5: Skyrim, with the aesthetic and atmosphere
 							being inspired by Resident Evil Village.
 							<br><a href="https://github.com/Joe34441/UE4-Dungeon-Level">Project</a>
-						</p>
-					</article>
-
-					<article>
-						<header>
-							<h2 style="font-size: xx-large;">Terrain Generator [WIP]</h2>
-						</header>
-						<div class="slicky">
-							<a href="bigimages/ue4dungeon/img1.png" data-caption="temp"><img src="images/ue4dungeon/img1.png" /></a>
-						</div>
-						<p style="font-size: large; text-align: left;">
-							A terrain generator created in Unreal Engine 4 with
-							C++. Combines multiple instances of noise maps to
-							allow the creation of a wide variety of landscape
-							patterns according to user input. The generator
-							dynamically constructs and renders meshes in chunks,
-							for which I have implemented mesh simplification and
-							edge smoothing techniques to allow for faster
-							generation with seamless chunk borders.
-							<br><a href="https://github.com">Project</a>
 						</p>
 					</article>
 				</section>
