added new ue4 terrain generator and older model renderer

--- a/index.html
+++ b/index.html
@@ -221,18 +221,24 @@
 							<h2 style="font-size: xx-large;">Terrain Generator</h2>
 						</header>
 						<div class="slicky">
-							<a href="bigimages/ue4terraingenerator/img1.png" data-caption="temp"><img src="images/ue4terraingenerator/img1.png" /></a>
+							<a href="bigimages/ue4terraingenerator/img1.png" data-caption="Generation seed #1"><img src="images/ue4terraingenerator/img1.png" /></a>
+							<a href="bigimages/ue4terraingenerator/img2.png" data-caption="Generation seed #1, with greater mountain modifiers"><img src="images/ue4terraingenerator/img2.png" /></a>
+							<a href="bigimages/ue4terraingenerator/img3.png" data-caption="Generation with greater water height"><img src="images/ue4terraingenerator/img3.png" /></a>
+							<a href="bigimages/ue4terraingenerator/img4.png" data-caption="Generation with extreme mountain modifiers"><img src="images/ue4terraingenerator/img4.png" /></a>
+							<a href="bigimages/ue4terraingenerator/img5.png" data-caption="User input for displayed terrain"><img src="images/ue4terraingenerator/img5.png" /></a>
+							<a href="bigimages/ue4terraingenerator/img6.png" data-caption="View from inside mountain - mesh drawing optimizations"><img src="images/ue4terraingenerator/img6.png" /></a>
+							<a href="bigimages/ue4terraingenerator/img7.png" data-caption="View from under terrain - mesh drawing optimizations, chunk borders visible"><img src="images/ue4terraingenerator/img7.png" /></a>
 						</div>
 						<p style="font-size: large; text-align: left;">
-							A terrain generator created in Unreal Engine 4 with
-							C++. Combines multiple instances of noise maps to
+							A voxel terrain generator created in Unreal Engine 4
+							with C++. Combines multiple instances of noise maps to
 							allow for the creation of a wide variety of landscape
 							patterns according to user input. The generator
 							dynamically constructs and renders the terrain mesh
 							in chunks, for which I have implemented mesh
 							simplification and edge smoothing techniques to allow
 							for faster generation with seamless chunk borders.
-							<br><a href="https://github.com">Project</a>
+							<br><a href="https://github.com/Joe34441/Terrain-Generator">Project</a>
 						</p>
 					</article>
 
@@ -281,6 +287,28 @@
 							classes for animation, audio and level/scene changing
 							so that all necessary game features were present.
 							<br><a href="https://github.com/Joe34441/Retrogame">Project</a>
+						</p>
+					</article>
+
+					<article>
+						<header>
+							<h2 style="font-size: xx-large;">Model Renderer</h2>
+						</header>
+						<div class="slicky">
+							<a href="bigimages/modelrenderer/main1.png" data-caption="Title Page"><img src="images/modelrenderer/main1.png" /></a>
+							<a href="bigimages/modelrenderer/main2.png" data-caption="Title Page"><img src="images/modelrenderer/main2.png" /></a>
+							<a href="bigimages/modelrenderer/main3.png" data-caption="Level 1-1"><img src="images/modelrenderer/main3.png" /></a>
+							<a href="bigimages/modelrenderer/main4.png" data-caption="Level 1-2"><img src="images/modelrenderer/main4.png" /></a>
+						</div>
+						<p style="font-size: large; text-align: left;">
+							A model renderer made in C++ using OpenGL, GLM, Glad, 
+							GLFW and Dear IMGUI. The program reads through object,
+							material and tga files to correctly draw the model, which
+							the user can then adjust through its transform
+							properties accessible within the GUI. The user can also
+							customise the viewable scene with the grid lines,
+							background and skybox.
+							<br><a href="https://github.com/Joe34441/Model-Renderer">Project</a>
 						</p>
 					</article>
 				</section>
